docs/refs/script-api/server/1.6.0/worldbeforeevents.md
# `WorldBeforeEvents`

> 文档版本：1.21.60.21

`WorldBeforeEvents`类。script_api.@minecraft/server.worldbeforeevents.description

## 属性

/// define
`entityRemove`


///

```js
read-only entityRemove: EntityRemoveBeforeEventSignal;
```

/// html | div.result
//// define
`entityRemove`：[`EntityRemoveBeforeEventSignal`](./entityremovebeforeeventsignal.md)

- script_api.@minecraft/server.worldbeforeevents.entityremove.description


////

///


/// define
`itemUse`


///

```js
read-only itemUse: ItemUseBeforeEventSignal;
```

/// html | div.result
//// define
`itemUse`：[`ItemUseBeforeEventSignal`](./itemusebeforeeventsignal.md)

- script_api.@minecraft/server.worldbeforeevents.itemuse.description


////

///


/// define
`itemUseOn`


///

```js
read-only itemUseOn: ItemUseOnBeforeEventSignal;
```

/// html | div.result
//// define
`itemUseOn`：[`ItemUseOnBeforeEventSignal`](./itemuseonbeforeeventsignal.md)

- script_api.@minecraft/server.worldbeforeevents.itemuseon.description


////

///


/// define
`playerBreakBlock`


///

```js
read-only playerBreakBlock: PlayerBreakBlockBeforeEventSignal;
```

/// html | div.result
//// define
`playerBreakBlock`：[`PlayerBreakBlockBeforeEventSignal`](./playerbreakblockbeforeeventsignal.md)

- script_api.@minecraft/server.worldbeforeevents.playerbreakblock.description


////

///

